tests/NormalTests/paczka1/fuzzy1/59691313.err
Error in line 1: HAc S47 70,4
Error in line 9: cZfu A544 56,1
Error in line 28: ncnWy8e A544 29,9
